--- a/przydatne-informacje/kalendarz-szczepien.html
+++ b/przydatne-informacje/kalendarz-szczepien.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Thu Jan 24 2019 21:16:49 GMT+0000 (UTC)  -->
+<!--  Last Published: Thu Jan 24 2019 21:19:05 GMT+0000 (UTC)  -->
 <html data-wf-page="55ee87ddffeb9dfb4814e7d9" data-wf-site="55d576c4965aff177731ada8">
 <head>
   <meta charset="utf-8">
@@ -64,7 +64,7 @@
       <div class="container123-189 w-container">
         <div id="kalendarz-szczepien" class="subnav-section">
           <h2 class="oferta-heading poradnia">Kalendarz szczepień</h2>
-          <p class="content-paragraph">Zapraszamy do zapoznania się z kalandarzem udostępnionym w serwisie mp.pl<br><span class="button-download"><a href="#" target="_blank">Zobacz kalendarz</a></span></p>
+          <p class="content-paragraph">Zapraszamy do zapoznania się z kalandarzem udostępnionym w serwisie mp.pl<br><span class="button-download"><a href="https://www.mp.pl/pacjent/szczepienia/organizacja-szczepien/52627,kalendarz-szczepien" target="_blank">Zobacz kalendarz</a></span></p>
         </div>
       </div>
     </div>
