--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Thu Jan 24 2019 21:20:45 GMT+0000 (UTC)  -->
+<!--  Last Published: Wed Feb 06 2019 08:43:52 GMT+0000 (UTC)  -->
 <html data-wf-page="55d576c4965aff177731adb1" data-wf-site="55d576c4965aff177731ada8">
 <head>
   <meta charset="utf-8">
@@ -86,11 +86,15 @@
         <h1>Aktualności</h1>
         <div class="news-individual">
           <h2>Poradnia Rodzinna ( NFZ ) oferuje kompleksową opiekę lekarską, pielęgniarską i położniczą nad dziećmi i dorosłymi</h2>
-          <div class="news-date-sublabel">Czwartek, 24 stycznia 2019</div>
+          <div class="news-date-sublabel">Środa, 06 lutego 2019</div>
           <div class="news-content-text">Prosimy o rejestrację telefoniczną</div><a href="kontakt.html" class="button red in-news"><span class="arrow-for-button">_</span> Umów się</a></div>
         <div class="news-individual">
           <h2>Specjalista medycy rodzinnej, specjalista chorób wewnętrznych (internista), lekarz pediatra - wizyty prywatne</h2>
-          <div class="news-date-sublabel">Czwartek, 07 grudnia 2017</div>
+          <div class="news-date-sublabel">Środa, 06 lutego 2019</div>
+          <div class="news-content-text">Prosimy o rejestrację telefoniczną</div><a href="kontakt.html" class="button red in-news"><span class="arrow-for-button">_</span> Umów się</a></div>
+        <div class="news-individual">
+          <h2>Pacjentki w ciąży prosimy o kontakt w celu umówienia się na bezpłatną edukację przedporodową z położną</h2>
+          <div class="news-date-sublabel">Środa, 06 lutego 2019</div>
           <div class="news-content-text">Prosimy o rejestrację telefoniczną</div><a href="kontakt.html" class="button red in-news"><span class="arrow-for-button">_</span> Umów się</a></div>
         <div class="news-individual">
           <h2>Zapraszamy do polubienia nas na Facebooku</h2>
