--- a/kontakt.html
+++ b/kontakt.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Wed Feb 06 2019 08:43:52 GMT+0000 (UTC)  -->
+<!--  Last Published: Wed Feb 06 2019 20:47:44 GMT+0000 (UTC)  -->
 <html data-wf-page="55d576c4965aff177731adae" data-wf-site="55d576c4965aff177731ada8">
 <head>
   <meta charset="utf-8">
@@ -67,6 +67,7 @@
         <h1 class="in-contact">Kontakt</h1>
         <p class="kontakt-adres">Centrum Medyczne „Warszawska&quot;<br>ul. Bukowskiego 1 lok.2<br>15-066 Białystok</p>
         <div class="contact-text-above-map important">Wejście od ul. Warszawskiej i  Modlińskiej.<br>Przy bramce proszę dzwonić domofonem.<br><span><a href="#map2" class="red-link">Zobacz mapkę</a></span></div>
+        <div class="contact-text-buses">Dojazd autobusami komunikacji miejskiej ( BKM nr 28, 8, 2, 5, 21 )</div>
         <div class="all-contacts">
           <div class="phone-box">
             <div class="phone-title">Poradnia rodzinna <span class="inline-nfz-logo">_</span></div>
@@ -75,12 +76,7 @@
               <div class="contact-phone-label"><span class="phone-label-fixed-width">Kom:</span> <strong class="contact-phone-link"><a href="tel:+48512677311" cms-text-phone-link="numerTelefonuKomorkaBezSpacji" cms-text="numerTelefonuKomorka" class="contact-phone-link">512 677 311</a></strong></div>
               <div class="open-hours"><span class="open-hours-title">Godziny otwarcia:</span><br> <span cms-text="kontaktGodzinyOtwarcia">PN - PT  w godzinach 8.00 - 18.00</span></div>
             </div>
-            <div class="additional-contacts">
-              <a href="#" class="link-reset w-inline-block">
-                <div data-ix="new-interaction-2" class="additional-contacts-button">Dodatkowe kontakty...</div>
-              </a>
-              <div data-ix="initial-display-none" class="additional-contact"><span cms-text="dodatkoweKontaktyAkapitPierwszy">Poza godzinami pracy poradni, bezpłatną opiekę nad naszymi pacjentami przejmuje SPZOZ Wojewódzka Stacja Pogotowia Ratunkowego przy ul. Poleskiej 89  | t<strong xmlns="http://www.w3.org/1999/xhtml">el </strong> <strong xmlns="http://www.w3.org/1999/xhtml">85 652 67 14</strong></span><strong><br></strong><span cms-text="dodatkoweKontaktyAkapitDrugi"><br xmlns="http://www.w3.org/1999/xhtml">Współpracujemy z Centrum Położnych Środowiskowych Sp.p. Położna środowiskowa <br xmlns="http://www.w3.org/1999/xhtml">Nina Sobiecka: tel 604 564 843</span><br><br><span cms-text="dodatkoweKontaktyAkapitTrzeci">Informacja medyczne całodobowo | tel. 194 39</span></div>
-            </div>
+            <div data-ix="initial-display-none" class="additional-contact"><span cms-text="dodatkoweKontaktyAkapitPierwszy">Poza godzinami pracy poradni, bezpłatną opiekę nad naszymi pacjentami przejmuje SPZOZ Wojewódzka Stacja Pogotowia Ratunkowego przy ul. Poleskiej 89  | t<strong xmlns="http://www.w3.org/1999/xhtml">el </strong> <strong xmlns="http://www.w3.org/1999/xhtml">85 652 67 14</strong></span><br><br><span cms-text="dodatkoweKontaktyAkapitTrzeci">Informacja medyczne całodobowo | tel. 194 39</span></div>
           </div>
           <div class="phone-box usg">
             <div class="phone-title">Gabinet badań USG</div>
