--- a/nasze-przychodnie/poradnia-rodzinna.html
+++ b/nasze-przychodnie/poradnia-rodzinna.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Wed Feb 06 2019 08:43:52 GMT+0000 (UTC)  -->
+<!--  Last Published: Wed Feb 06 2019 20:47:44 GMT+0000 (UTC)  -->
 <html data-wf-page="55e5d891c8a4a0594583e1f5" data-wf-site="55d576c4965aff177731ada8">
 <head>
   <meta charset="utf-8">
@@ -123,13 +123,13 @@
         <div id="personel-medyczny" class="subnav-section">
           <h2 class="oferta-heading poradnia">Personel medyczny</h2>
           <ul class="content-paragraph">
-            <li cms-text="rodzinnaLekarz1">lek. med. Elżbieta Malinowska - specjalista medycyny rodzinnej, pediatra</li>
+            <li cms-text="rodzinnaLekarz1">lek. med. Elżbieta Malinowska - specjalista medycyny rodzinnej, pediatra</li>
             <li cms-text="rodzinnaLekarz2">lek. med. Patrycja Budna - specjalista medycyny rodzinnej</li>
             <li cms-text="rodzinnaLekarz3">lek. med. Wojciech Budny - specjalista chorób wewnętrznych</li>
-            <li cms-text="rodzinnaLekarz4">piel. Irena Dawidowicz - specjalista pielęgniarstwa pediatrycznego</li>
-            <li cms-text="rodzinnaLekarz5">mgr piel. Urszula Moniuszko - specjalista pielęgniarstwa anestezjologicznego i intensywnej opieki</li>
-            <li cms-text="rodzinnaLekarz6">piel. Katarzyna Jasińska</li>
-            <li cms-text="rodzinnaLekarz7">mgr położna Katarzyna Kitlasz - Baczyńska</li>
+            <li cms-text="rodzinnaLekarz4">piel. Irena Dawidowicz - specjalista pielęgniarstwa pediatrycznego, pielęgniarka szczepienna</li>
+            <li cms-text="rodzinnaLekarz5">piel. Anna Zalewska – pielęgniarka środowiskowo-rodzinna i szczepienna</li>
+            <li cms-text="rodzinnaLekarz6">piel. Kinga Sićko</li>
+            <li cms-text="rodzinnaLekarz7">mgr położna Katarzyna Kitlasz-Baczyńska - położna środowiskowo-rodzinna, edukator laktacyjny</li>
             <li cms-text="rodzinnaLekarz8">-</li>
             <li cms-text="rodzinnaLekarz9">-</li>
           </ul>
