Replace google maps with img

--- a/kontakt.html
+++ b/kontakt.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Wed Feb 06 2019 20:52:51 GMT+0000 (UTC)  -->
+<!--  Last Published: Wed Feb 06 2019 20:57:56 GMT+0000 (UTC)  -->
 <html data-wf-page="55d576c4965aff177731adae" data-wf-site="55d576c4965aff177731ada8">
 <head>
   <meta charset="utf-8">
@@ -91,8 +91,7 @@
               <div class="contact-phone-label"><span class="phone-label-fixed-width">Kom:</span> <strong class="contact-phone-link medstyl"><span><a href="tel:+48662149977" cms-text="numerTelefonuMedstyl" cms-text-phone-link="numerTelefonuMedstylBezSpacji" class="contact-phone-link medstyl">662 149 977</a></span></strong></div>
             </div>
           </div>
-        </div>
-        <div data-widget-latlng="53.132264,23.174683" data-widget-style="roadmap" data-widget-zoom="15" data-widget-tooltip="Centrum Medyczne" class="contact-map w-widget w-widget-map"></div>
+        </div><a href="https://goo.gl/maps/dnnUwcWX3AM2" class="maps-img-holder w-inline-block"><img src="images/cmwarszawskamap-1.png" alt=""></a>
         <div id="map2" class="contact-text-above-map">Wejście od ul. Warszawskiej i  Modlińskiej.<br>Przy bramce proszę dzwonić domofonem.</div><img src="images/mapka.png" alt="" class="mapka-png"></div>
     </div>
     <div class="footer">
