--- a/kontakt.html
+++ b/kontakt.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Wed Feb 06 2019 20:57:56 GMT+0000 (UTC)  -->
+<!--  Last Published: Thu Feb 07 2019 08:22:30 GMT+0000 (UTC)  -->
 <html data-wf-page="55d576c4965aff177731adae" data-wf-site="55d576c4965aff177731ada8">
 <head>
   <meta charset="utf-8">
@@ -76,7 +76,7 @@
               <div class="contact-phone-label"><span class="phone-label-fixed-width">Kom:</span> <strong class="contact-phone-link"><a href="tel:+48512677311" cms-text-phone-link="numerTelefonuKomorkaBezSpacji" cms-text="numerTelefonuKomorka" class="contact-phone-link">512 677 311</a></strong></div>
               <div class="open-hours"><span class="open-hours-title">Godziny otwarcia:</span><br> <span cms-text="kontaktGodzinyOtwarcia">PN - PT  w godzinach 8.00 - 18.00</span></div>
             </div>
-            <div class="additional-contact"><span>Poza godzinami pracy poradni, bezpłatną opiekę nad naszymi pacjentami przejmuje SPZOZ Wojewódzka Stacja Pogotowia Ratunkowego przy ul. Poleskiej 89  | t<strong xmlns="http://www.w3.org/1999/xhtml">el </strong> <strong xmlns="http://www.w3.org/1999/xhtml">85 652 67 14</strong></span><br><br><span>Informacja medyczne całodobowo | tel. 194 39</span></div>
+            <div class="additional-contact"><span>Informacja medyczna całodobowo | tel. 194 39</span></div>
           </div>
           <div class="phone-box usg">
             <div class="phone-title">Gabinet badań USG</div>
