--- a/kontakt.html
+++ b/kontakt.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sun Sep 29 2019 12:56:36 GMT+0000 (UTC)  -->
+<!--  Last Published: Sat Jun 20 2020 10:11:31 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="55d576c4965aff177731adae" data-wf-site="55d576c4965aff177731ada8">
 <head>
   <meta charset="utf-8">
@@ -31,7 +31,7 @@
   <div data-ix="new-interaction" id="simplecookienotification_v01" class="cookie-pop cookies-box w-clearfix">
     <div class="strona-uzywa">Strona używa plików cookies. W trosce o twoje dane osobowe prosimy o zapoznanie się z <a href="polityka-cookies.html" class="cookie-pop__link">polityką prywatności</a>.</div><a href="#" id="accept-cookie" class="button in_cookies">Zgoda</a></div>
   <div class="wrapper">
-    <div data-collapse="medium" data-animation="default" data-duration="400" data-doc-height="1" class="navbar w-nav">
+    <div data-collapse="medium" data-animation="default" data-duration="400" data-doc-height="1" role="banner" class="navbar w-nav">
       <div class="w-container"><a href="index.html" class="brand w-nav-brand"><img src="images/cmwarszawska-logo-edited.jpg" alt="" class="ale-gramy-logo"></a>
         <div class="nav-phone-box">
           <a href="tel:858755355" class="nav-phone-link w-inline-block">
@@ -48,14 +48,14 @@
             <div class="nav-link w-dropdown-toggle">
               <div>Nasze przychodnie</div>
             </div>
-            <nav class="dropdown-menu w-dropdown-list"><a href="nasze-przychodnie/poradnia-rodzinna.html" class="dropdown-link poradnia-rodzinna w-dropdown-link">Poradnia Rodzinna <span class="inline-nfz-logo">_</span></a><a href="nasze-przychodnie/gainet-usg.html" class="dropdown-link gabinet-usg w-dropdown-link">Gabinet Badań USG</a><a href="nasze-przychodnie/medstyl-medycyna-estetyczna.html" class="dropdown-link medstyl w-dropdown-link"><span class="hero-medstyl-inline">_</span> Medycyna Estetyczna</a></nav>
+            <nav class="dropdown-menu w-dropdown-list"><a href="nasze-przychodnie/poradnia-rodzinna.html" class="dropdown-link poradnia-rodzinna w-dropdown-link">Poradnia Rodzinna <span class="inline-nfz-logo">_</span></a><a href="nasze-przychodnie/medstyl-medycyna-estetyczna.html" class="dropdown-link medstyl w-dropdown-link"><span class="hero-medstyl-inline">_</span> Medycyna Estetyczna</a></nav>
           </div>
           <div data-delay="0" class="dropdown-reset w-dropdown">
             <div class="nav-link w-dropdown-toggle">
               <div>Przydatne informacje</div>
             </div>
-            <nav class="dropdown-menu w-dropdown-list"><a href="przydatne-informacje/przygotowanie-do-usg.html" class="dropdown-link w-dropdown-link">Przygotowanie do USG</a><a href="przydatne-informacje/kalendarz-szczepien.html" class="dropdown-link w-dropdown-link">Kalendarz szczepień</a></nav>
-          </div><a href="kontakt.html" class="nav-link last-button w-nav-link w--current">Kontakt</a></nav>
+            <nav class="dropdown-menu w-dropdown-list"><a href="przydatne-informacje/kalendarz-szczepien.html" class="dropdown-link w-dropdown-link">Kalendarz szczepień</a></nav>
+          </div><a href="kontakt.html" aria-current="page" class="nav-link last-button w-nav-link w--current">Kontakt</a></nav>
         <div class="menu_button_active w-clearfix w-nav-button">
           <div class="menu_icon w-icon-nav-menu"></div>
           <div class="menu-label">Menu</div>
@@ -78,13 +78,6 @@
             </div>
             <div class="additional-contact"><span>Informacja medyczna całodobowo | tel. 194 39</span></div>
           </div>
-          <div class="phone-box usg">
-            <div class="phone-title">Gabinet badań USG</div>
-            <div class="phones-list">
-              <div class="contact-phone-label"><span class="phone-label-fixed-width">Tel:</span><strong class="contact-phone-link"><a href="tel:858755355" cms-text="numerTelefonu" cms-text-phone-link="numerTelefonuBezSpacji" class="contact-phone-link">85 875 53 55</a></strong></div>
-              <div class="contact-phone-label"><span class="phone-label-fixed-width">Kom:</span> <strong class="contact-phone-link"><a href="tel:+48512677311" cms-text="numerTelefonuKomorka" cms-text-phone-link="numerTelefonuKomorkaBezSpacji" class="contact-phone-link">512 677 311</a></strong></div>
-            </div>
-          </div>
           <div class="phone-box medstyl">
             <div class="phone-title"><span class="hero-medstyl-inline">_</span> Medycyna Estetyczna</div>
             <div class="phones-list">
@@ -98,7 +91,7 @@
       <div class="w-container">
         <div class="w-row">
           <div class="footer-left w-clearfix w-col w-col-5 w-col-stack">
-            <a href="kontakt.html" class="link-block w-inline-block w--current">
+            <a href="kontakt.html" aria-current="page" class="link-block w-inline-block w--current">
               <div class="footer-text padding-right">Kontakt</div>
             </a>
             <a href="polityka-cookies.html" class="link-block w-inline-block">
@@ -110,7 +103,7 @@
               <div class="footer-text">Design &amp; Code by MaciejSawicki.com</div>
             </a>
             <div class="footer-text w-hidden-small w-hidden-tiny">|</div>
-            <a href="kontakt.html" class="link-block w-inline-block w--current">
+            <a href="kontakt.html" aria-current="page" class="link-block w-inline-block w--current">
               <div class="footer-text no-padding-right">© 2019 Centrum Medyczne Warszawska</div>
             </a>
           </div>
@@ -118,7 +111,7 @@
       </div>
     </div>
   </div>
-  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.4.1.min.220afd743d.js" type="text/javascript" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.4.1.min.220afd743d.js?site=55d576c4965aff177731ada8" type="text/javascript" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
   <script src="https://cdn.rawgit.com/carhartl/jquery-cookie/master/src/jquery.cookie.js"></script>
