--- a/nasze-przychodnie/poradnia-rodzinna.html
+++ b/nasze-przychodnie/poradnia-rodzinna.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sun Sep 29 2019 12:56:36 GMT+0000 (UTC)  -->
+<!--  Last Published: Sat Jun 20 2020 10:11:31 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="55e5d891c8a4a0594583e1f5" data-wf-site="55d576c4965aff177731ada8">
 <head>
   <meta charset="utf-8">
@@ -29,7 +29,7 @@
 </head>
 <body>
   <div class="wrapper">
-    <div data-collapse="medium" data-animation="default" data-duration="400" data-doc-height="1" class="navbar w-nav">
+    <div data-collapse="medium" data-animation="default" data-duration="400" data-doc-height="1" role="banner" class="navbar w-nav">
       <div class="w-container"><a href="../index.html" class="brand w-nav-brand"><img src="../images/cmwarszawska-logo-edited.jpg" alt="" class="ale-gramy-logo"></a>
         <div class="nav-phone-box">
           <a href="tel:858755355" class="nav-phone-link w-inline-block">
@@ -46,13 +46,13 @@
             <div class="nav-link w-dropdown-toggle">
               <div>Nasze przychodnie</div>
             </div>
-            <nav class="dropdown-menu w-dropdown-list"><a href="../nasze-przychodnie/poradnia-rodzinna.html" class="dropdown-link poradnia-rodzinna w-dropdown-link w--current">Poradnia Rodzinna <span class="inline-nfz-logo">_</span></a><a href="../nasze-przychodnie/gainet-usg.html" class="dropdown-link gabinet-usg w-dropdown-link">Gabinet Badań USG</a><a href="../nasze-przychodnie/medstyl-medycyna-estetyczna.html" class="dropdown-link medstyl w-dropdown-link"><span class="hero-medstyl-inline">_</span> Medycyna Estetyczna</a></nav>
+            <nav class="dropdown-menu w-dropdown-list"><a href="../nasze-przychodnie/poradnia-rodzinna.html" aria-current="page" class="dropdown-link poradnia-rodzinna w-dropdown-link w--current">Poradnia Rodzinna <span class="inline-nfz-logo">_</span></a><a href="../nasze-przychodnie/medstyl-medycyna-estetyczna.html" class="dropdown-link medstyl w-dropdown-link"><span class="hero-medstyl-inline">_</span> Medycyna Estetyczna</a></nav>
           </div>
           <div data-delay="0" class="dropdown-reset w-dropdown">
             <div class="nav-link w-dropdown-toggle">
               <div>Przydatne informacje</div>
             </div>
-            <nav class="dropdown-menu w-dropdown-list"><a href="../przydatne-informacje/przygotowanie-do-usg.html" class="dropdown-link w-dropdown-link">Przygotowanie do USG</a><a href="../przydatne-informacje/kalendarz-szczepien.html" class="dropdown-link w-dropdown-link">Kalendarz szczepień</a></nav>
+            <nav class="dropdown-menu w-dropdown-list"><a href="../przydatne-informacje/kalendarz-szczepien.html" class="dropdown-link w-dropdown-link">Kalendarz szczepień</a></nav>
           </div><a href="../kontakt.html" class="nav-link last-button w-nav-link">Kontakt</a></nav>
         <div class="menu_button_active w-clearfix w-nav-button">
           <div class="menu_icon w-icon-nav-menu"></div>
@@ -98,7 +98,7 @@
           <h2 class="oferta-heading poradnia">O przychodni</h2>
           <p class="content-paragraph">NZOZ Centrum Medyczne „Warszawska&quot; świadczy bezpłatne usługi medyczne w zakresie podstawowej opieki zdrowotnej bezpłatnie na podstawie umowy z NFZ oraz prywatnie.</p><img src="../images/centrum-medyczne-warszawska-budynek.jpg" alt="" class="cm-content-image">
           <div class="inner-header"><strong>Usługi w ramach NFZ</strong></div>
-          <ul class="content-paragraph">
+          <ul role="list" class="content-paragraph">
             <li>badania i porady lekarskie</li>
             <li>badania diagnostyczne, podstawowa analityka medyczna, badanie EKG</li>
             <li>opieka nad kobietą w ciąży</li>
@@ -110,7 +110,7 @@
             <li>lekarskie wizyty domowe w uzasadnionych medycznie przypadkach</li>
           </ul>
           <div class="inner-header"><strong>Dodatkowe udogodnienia</strong></div>
-          <ul class="content-paragraph">
+          <ul role="list" class="content-paragraph">
             <li>Oferujemy parking podziemny dla naszych pacjentów</li>
             <li>Lokal jest przystosowany do potrzeb osób niepełnosprawnych</li>
             <li>W lokalu znajduje się kącik zabaw dla dzieci oraz przewijak </li>
@@ -122,7 +122,7 @@
         </div>
         <div id="personel-medyczny" class="subnav-section">
           <h2 class="oferta-heading poradnia">Personel medyczny</h2>
-          <ul class="content-paragraph">
+          <ul role="list" class="content-paragraph">
             <li cms-text="rodzinnaLekarz1">lek. med. Elżbieta Malinowska - specjalista medycyny rodzinnej, pediatra</li>
             <li cms-text="rodzinnaLekarz2">lek. med. Patrycja Budna - specjalista medycyny rodzinnej</li>
             <li cms-text="rodzinnaLekarz3">lek. med. Wojciech Budny - specjalista chorób wewnętrznych</li>
@@ -174,7 +174,7 @@
       </div>
     </div>
   </div>
-  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.4.1.min.220afd743d.js" type="text/javascript" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.4.1.min.220afd743d.js?site=55d576c4965aff177731ada8" type="text/javascript" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script src="../js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
   <script src="https://cdn.rawgit.com/carhartl/jquery-cookie/master/src/jquery.cookie.js"></script>
