--- a/nasze-przychodnie/gainet-usg.html
+++ b/nasze-przychodnie/gainet-usg.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sun Sep 29 2019 12:56:36 GMT+0000 (UTC)  -->
+<!--  Last Published: Sat Jun 20 2020 10:11:31 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="55d576c4965aff177731adad" data-wf-site="55d576c4965aff177731ada8">
 <head>
   <meta charset="utf-8">
@@ -29,7 +29,7 @@
 </head>
 <body>
   <div class="wrapper">
-    <div data-collapse="medium" data-animation="default" data-duration="400" data-doc-height="1" class="navbar w-nav">
+    <div data-collapse="medium" data-animation="default" data-duration="400" data-doc-height="1" role="banner" class="navbar w-nav">
       <div class="w-container"><a href="../index.html" class="brand w-nav-brand"><img src="../images/cmwarszawska-logo-edited.jpg" alt="" class="ale-gramy-logo"></a>
         <div class="nav-phone-box">
           <a href="tel:858755355" class="nav-phone-link w-inline-block">
@@ -46,13 +46,13 @@
             <div class="nav-link w-dropdown-toggle">
               <div>Nasze przychodnie</div>
             </div>
-            <nav class="dropdown-menu w-dropdown-list"><a href="../nasze-przychodnie/poradnia-rodzinna.html" class="dropdown-link poradnia-rodzinna w-dropdown-link">Poradnia Rodzinna <span class="inline-nfz-logo">_</span></a><a href="../nasze-przychodnie/gainet-usg.html" class="dropdown-link gabinet-usg w-dropdown-link w--current">Gabinet Badań USG</a><a href="../nasze-przychodnie/medstyl-medycyna-estetyczna.html" class="dropdown-link medstyl w-dropdown-link"><span class="hero-medstyl-inline">_</span> Medycyna Estetyczna</a></nav>
+            <nav class="dropdown-menu w-dropdown-list"><a href="../nasze-przychodnie/poradnia-rodzinna.html" class="dropdown-link poradnia-rodzinna w-dropdown-link">Poradnia Rodzinna <span class="inline-nfz-logo">_</span></a><a href="../nasze-przychodnie/medstyl-medycyna-estetyczna.html" class="dropdown-link medstyl w-dropdown-link"><span class="hero-medstyl-inline">_</span> Medycyna Estetyczna</a></nav>
           </div>
           <div data-delay="0" class="dropdown-reset w-dropdown">
             <div class="nav-link w-dropdown-toggle">
               <div>Przydatne informacje</div>
             </div>
-            <nav class="dropdown-menu w-dropdown-list"><a href="../przydatne-informacje/przygotowanie-do-usg.html" class="dropdown-link w-dropdown-link">Przygotowanie do USG</a><a href="../przydatne-informacje/kalendarz-szczepien.html" class="dropdown-link w-dropdown-link">Kalendarz szczepień</a></nav>
+            <nav class="dropdown-menu w-dropdown-list"><a href="../przydatne-informacje/kalendarz-szczepien.html" class="dropdown-link w-dropdown-link">Kalendarz szczepień</a></nav>
           </div><a href="../kontakt.html" class="nav-link last-button w-nav-link">Kontakt</a></nav>
         <div class="menu_button_active w-clearfix w-nav-button">
           <div class="menu_icon w-icon-nav-menu"></div>
@@ -62,94 +62,15 @@
     </div>
     <div>
       <div class="container123-189 w-container">
-        <div class="subnav-head-box gabinet-usg">
-          <div class="subnav-header">
-            <div class="w-row">
-              <div class="column-reset-padding subhead-center w-col w-col-6">
-                <h1 class="in-subnav">Gabinet badań USG</h1>
-              </div>
-              <div class="column-reset-padding subhead-center w-col w-col-6">
-                <div class="subnav-phones w-clearfix">
-                  <div class="contact-phone-label in-top-right"><span class="subnav-inline-phone-white">_:</span> <strong><a href="tel:+48512677311" cms-text="numerTelefonuKomorka" cms-text-phone-link="numerTelefonuKomorkaBezSpacji" class="contact-phone-link">512 677 311</a></strong></div>
-                  <div class="contact-phone-label in-top-right"><span class="subnav-inline-phone-white">_:</span> <strong><a href="tel:858755355" cms-text="numerTelefonu" cms-text-phone-link="numerTelefonuBezSpacji" class="contact-phone-link">85 87 55 355</a></strong></div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div id="sticker" class="subnav-tabs-box gabinet-usg">
-            <a href="#personel" class="subnav-link w-inline-block">
-              <div>Personel medyczny</div>
-            </a>
-            <a href="#sprzet" class="subnav-link w-inline-block">
-              <div>Sprzęt medyczny</div>
-            </a>
-            <a href="#cennik" class="subnav-link w-inline-block">
-              <div>Cennik</div>
-            </a>
-            <a href="#przygotowanie" class="subnav-link w-inline-block">
-              <div>Przygotowanie do badania</div>
+        <div class="closed-info">
+          <div class="closed-info__h">Gabinet USG nieczynny</div>
+          <div class="closed-info__p">Przychodnia nie wykonuje już usług USG</div>
+          <div class="closed-info__button-holder">
+            <a href="#" class="button is-closed-info w-inline-block">
+              <div>Wróć do strony głównej</div>
             </a>
           </div>
         </div>
-        <div id="personel" class="subnav-section">
-          <h2 class="oferta-heading gabinet-usg">Personel medyczny i godziny przyjęć</h2>
-          <ul class="content-paragraph hours-box is-hidden-for-future w-list-unstyled">
-            <li cms-text="usgLekarz1__imie" class="usg-lekarz-imie"><strong>Lek. med. Marta Martynowicz</strong></li>
-            <li cms-text="usgLekarz1__opis" class="usg-rodzaj-badania">Badania niemowląt, dzieci i dorosłych</li>
-            <li cms-text="usgLekarz1__godziny" class="usg-hours">Wtorki i czwartki w godz. 13.00 -16.00 </li>
-          </ul>
-          <ul class="content-paragraph hours-box is-hidden-for-future w-list-unstyled">
-            <li class="usg-lekarz-imie"><strong cms-text="usgLekarz2__imie">Lek. med. Monika Plona-Herbst <br></strong></li>
-            <li cms-text="usgLekarz2__opis" class="usg-rodzaj-badania">Badania niemowląt, dzieci i dorosłych</li>
-            <li cms-text="usgLekarz2__godziny" class="usg-hours">Środy w godz. 13.00 - 18.00</li>
-          </ul>
-          <ul class="content-paragraph hours-box is-hidden-for-future w-list-unstyled">
-            <li cms-text="usgLekarz3__imie" class="usg-lekarz-imie"><strong>Lek. med. Julia Rutkowska</strong></li>
-            <li cms-text="usgLekarz3__opis" class="usg-rodzaj-badania">Specjalista radiologii i diagnostyki obrazowej. Badania dzieci i dorosłych</li>
-            <li cms-text="usgLekarz3__godziny" class="usg-hours">Środy w godz. 13.00 - 18.00</li>
-          </ul>
-          <ul class="content-paragraph hours-box is-hidden-for-future w-list-unstyled">
-            <li cms-text="usgLekarz4__imie" class="usg-lekarz-imie">----------------</li>
-            <li cms-text="usgLekarz4__opis" class="usg-rodzaj-badania">-------------</li>
-            <li cms-text="usgLekarz4__godziny" class="usg-hours">-------------</li>
-          </ul>
-          <div class="content-paragraph gray subtext-below-hours">Badanie USG są wykonywane przez lekarzy specjalistów z wieloletnim doświadczeniem.<br><br>Prosimy o  umawianie się na konkretne godziny.<br>Zalecane jest przedstawienie wcześniej wykonywanych badań USG.</div><img src="../images/DSC00182-22.jpg" alt="" class="cm-content-image"></div>
-        <div id="sprzet" class="subnav-section">
-          <h2 class="oferta-heading gabinet-usg">Sprzęt medyczny</h2>
-          <p class="content-paragraph">Badania są wykonywane na nowoczesnym aparacie USG SONIX OP</p><img src="../images/sonix_op.jpg" width="235" alt="" class="centered-image usg-machine"></div>
-        <div id="cennik" class="subnav-section">
-          <h2 class="oferta-heading gabinet-usg">Cennik</h2>
-          <ul class="content-paragraph hours-box with-price w-list-unstyled">
-            <li class="price-row w-clearfix"><span cms-text="usgCennik__wiersz1__tytul" class="price-left-column">USG brzucha</span> <span cms-text="usgCennik__wiersz1__cena" class="price-float">70 zł</span></li>
-            <li class="price-row w-clearfix"><span cms-text="usgCennik__wiersz2__tytul" class="price-left-column">USG tarczycy</span> <span cms-text="usgCennik__wiersz2__cena" class="price-float">60 zł</span></li>
-            <li class="price-row w-clearfix"><span cms-text="usgCennik__wiersz3__tytul" class="price-left-column">USG piersi</span> <span cms-text="usgCennik__wiersz3__cena" class="price-float">80 zł</span></li>
-            <li class="price-row w-clearfix"><span cms-text="usgCennik__wiersz4__tytul" class="price-left-column">USG układu moczowego</span><span cms-text="usgCennik__wiersz4__cena" class="price-float">70 zł</span></li>
-            <li class="price-row w-clearfix"><span cms-text="usgCennik__wiersz5__tytul" class="price-left-column">USG brzucha z oceną gruczołu krokowego</span> <span cms-text="usgCennik__wiersz5__cena" class="price-float">80 zł</span></li>
-            <li class="price-row w-clearfix"><span cms-text="usgCennik__wiersz6__tytul" class="price-left-column">USG gruczołu krokowego</span> <span cms-text="usgCennik__wiersz6__cena" class="price-float">60 zł</span></li>
-            <li class="price-row w-clearfix"><span cms-text="usgCennik__wiersz7__tytul" class="price-left-column">USG węzłów chłonnych</span> <span cms-text="usgCennik__wiersz7__cena" class="price-float">60 zł</span></li>
-            <li class="price-row w-clearfix"><span cms-text="usgCennik__wiersz8__tytul" class="price-left-column">USG ślinianek</span> <span cms-text="usgCennik__wiersz8__cena" class="price-float">60 zł</span></li>
-            <li class="price-row w-clearfix"><span cms-text="usgCennik__wiersz9__tytul" class="price-left-column">USG tkanek miękkich</span> <span cms-text="usgCennik__wiersz9__cena" class="price-float">60 zł</span></li>
-            <li class="price-row w-clearfix"><span cms-text="usgCennik__wiersz10__tytul" class="price-left-column">USG Doppler aorty i tętnic biodrowych</span> <span cms-text="usgCennik__wiersz10__cena" class="price-float">120zł</span></li>
-            <li class="price-row w-clearfix"><span cms-text="usgCennik__wiersz11__tytul" class="price-left-column">USG Doppler żył lub tętnic kończyn dolnych</span> <span cms-text="usgCennik__wiersz11__cena" class="price-float">-</span></li>
-            <li class="price-row w-clearfix"><span cms-text="usgCennik__wiersz12__tytul" class="price-left-column">– obie kończyny dolne</span> <span cms-text="usgCennik__wiersz12__cena" class="price-float">110 zł</span></li>
-            <li class="price-row w-clearfix"><span cms-text="usgCennik__wiersz13__tytul" class="price-left-column">– jedna kończyna dolna</span> <span cms-text="usgCennik__wiersz13__cena" class="price-float">80 zł</span></li>
-            <li class="price-row w-clearfix"><span cms-text="usgCennik__wiersz14__tytul" class="price-left-column">USG Doppler tętnic szyjnych i kręgowych</span> <span cms-text="usgCennik__wiersz14__cena" class="price-float">90 zł</span></li>
-            <li class="price-row w-clearfix"><span cms-text="usgCennik__wiersz15__tytul" class="price-left-column">USG Doppler tętnic nerkowych</span> <span cms-text="usgCennik__wiersz15__cena" class="price-float">140 zł</span></li>
-            <li class="price-row w-clearfix"><span cms-text="usgCennik__wiersz16__tytul" class="price-left-column">-</span> <span cms-text="usgCennik__wiersz16__cena" class="price-float">-</span></li>
-            <li class="price-row w-clearfix"><span cms-text="usgCennik__wiersz17__tytul" class="price-left-column">-</span> <span cms-text="usgCennik__wiersz17__cena" class="price-float">-</span></li>
-            <li class="price-row w-clearfix"><span cms-text="usgCennik__wiersz18__tytul" class="price-left-column">-</span> <span cms-text="usgCennik__wiersz18__cena" class="price-float">-</span></li>
-            <li class="price-row w-clearfix"><span cms-text="usgCennik__wiersz19__tytul" class="price-left-column">-</span> <span cms-text="usgCennik__wiersz19__cena" class="price-float">-</span></li>
-            <li class="price-row w-clearfix"><span cms-text="usgCennik__wiersz20__tytul" class="price-left-column">-</span> <span cms-text="usgCennik__wiersz20__cena" class="price-float">-</span></li>
-          </ul>
-        </div>
-        <div id="badania-nfz" class="subnav-section is-hidden-for-future">
-          <h2 class="oferta-heading gabinet-usg">Badanie bezpłatne</h2>
-          <p class="content-paragraph">W naszym gabinecie możliwe są bezpłatne badania w ramach NFZ, na podstawie skierowania od lekarzy (Niepublicznych Zakładów Opieki Zdrowotnej) posiadających umowę z naszą przychodnią na wykonywanie badań USG. W razie wątpliwości prosimy o kontakt telefoniczny.<span><a href="#"></a></span></p><img src="../images/nfz-logo.png" alt="" class="centered-image nfz"></div>
-        <div id="przygotowanie" class="subnav-section">
-          <h2 class="oferta-heading gabinet-usg">Przygotowanie do badania</h2>
-          <p class="content-paragraph">Aby zobaczyć jak przygotować się do badania <span><a href="../przydatne-informacje/przygotowanie-do-usg.html">kliknij tutaj</a></span></p>
-        </div>
-        <div class="bottom-button"><a href="../kontakt.html" class="button red"><span class="arrow-for-button">_</span> Umów się na wizytę</a></div>
       </div>
     </div>
     <div class="footer">
@@ -176,7 +97,7 @@
       </div>
     </div>
   </div>
-  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.4.1.min.220afd743d.js" type="text/javascript" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.4.1.min.220afd743d.js?site=55d576c4965aff177731ada8" type="text/javascript" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script src="../js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
   <script src="https://cdn.rawgit.com/carhartl/jquery-cookie/master/src/jquery.cookie.js"></script>
