--- a/nasze-przychodnie/medstyl-medycyna-estetyczna.html
+++ b/nasze-przychodnie/medstyl-medycyna-estetyczna.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sun Sep 29 2019 12:56:36 GMT+0000 (UTC)  -->
+<!--  Last Published: Sat Jun 20 2020 10:11:31 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="55e7f2977ccabd4334861a72" data-wf-site="55d576c4965aff177731ada8">
 <head>
   <meta charset="utf-8">
@@ -29,7 +29,7 @@
 </head>
 <body>
   <div class="wrapper">
-    <div data-collapse="medium" data-animation="default" data-duration="400" data-doc-height="1" class="navbar w-nav">
+    <div data-collapse="medium" data-animation="default" data-duration="400" data-doc-height="1" role="banner" class="navbar w-nav">
       <div class="w-container"><a href="../index.html" class="brand w-nav-brand"><img src="../images/cmwarszawska-logo-edited.jpg" alt="" class="ale-gramy-logo"></a>
         <div class="nav-phone-box">
           <a href="tel:858755355" class="nav-phone-link w-inline-block">
@@ -46,13 +46,13 @@
             <div class="nav-link w-dropdown-toggle">
               <div>Nasze przychodnie</div>
             </div>
-            <nav class="dropdown-menu w-dropdown-list"><a href="../nasze-przychodnie/poradnia-rodzinna.html" class="dropdown-link poradnia-rodzinna w-dropdown-link">Poradnia Rodzinna <span class="inline-nfz-logo">_</span></a><a href="../nasze-przychodnie/gainet-usg.html" class="dropdown-link gabinet-usg w-dropdown-link">Gabinet Badań USG</a><a href="../nasze-przychodnie/medstyl-medycyna-estetyczna.html" class="dropdown-link medstyl w-dropdown-link w--current"><span class="hero-medstyl-inline">_</span> Medycyna Estetyczna</a></nav>
+            <nav class="dropdown-menu w-dropdown-list"><a href="../nasze-przychodnie/poradnia-rodzinna.html" class="dropdown-link poradnia-rodzinna w-dropdown-link">Poradnia Rodzinna <span class="inline-nfz-logo">_</span></a><a href="../nasze-przychodnie/medstyl-medycyna-estetyczna.html" aria-current="page" class="dropdown-link medstyl w-dropdown-link w--current"><span class="hero-medstyl-inline">_</span> Medycyna Estetyczna</a></nav>
           </div>
           <div data-delay="0" class="dropdown-reset w-dropdown">
             <div class="nav-link w-dropdown-toggle">
               <div>Przydatne informacje</div>
             </div>
-            <nav class="dropdown-menu w-dropdown-list"><a href="../przydatne-informacje/przygotowanie-do-usg.html" class="dropdown-link w-dropdown-link">Przygotowanie do USG</a><a href="../przydatne-informacje/kalendarz-szczepien.html" class="dropdown-link w-dropdown-link">Kalendarz szczepień</a></nav>
+            <nav class="dropdown-menu w-dropdown-list"><a href="../przydatne-informacje/kalendarz-szczepien.html" class="dropdown-link w-dropdown-link">Kalendarz szczepień</a></nav>
           </div><a href="../kontakt.html" class="nav-link last-button w-nav-link">Kontakt</a></nav>
         <div class="menu_button_active w-clearfix w-nav-button">
           <div class="menu_icon w-icon-nav-menu"></div>
@@ -102,13 +102,13 @@
         <div id="zabiegi" class="subnav-section">
           <h2 class="oferta-heading medstyl">Zabiegi</h2>
           <div class="content-paragraph">Oferujemy zabiegi odmładzające na twarz, dekolt i szyję:</div>
-          <ul class="content-paragraph">
+          <ul role="list" class="content-paragraph">
             <li>korekta zmarszczek</li>
             <li>modelowanie kształtu twarzy</li>
             <li>ujędrnianie skóry</li>
           </ul>
           <div class="content-paragraph">Stosowane metody:</div>
-          <ul class="content-paragraph">
+          <ul role="list" class="content-paragraph">
             <li>kwas hialuronowy</li>
             <li>botox</li>
             <li>preparat Sculptra</li>
@@ -153,10 +153,10 @@
     }
   ]
 }</script></a></div>
-              <div class="w-col w-col-2"><a href="#" class="lightbox-element w-inline-block w-lightbox"><img src="../images/c03.jpg" alt=""><script type="application/json" class="w-json">{
+              <div class="w-col w-col-2"><a href="#" class="lightbox-element w-inline-block w-lightbox"><img src="../images/c03_1.jpg" alt=""><script type="application/json" class="w-json">{
   "items": [
     {
-      "url": "../images/c03_1.jpg",
+      "url": "../images/c03.jpg",
       "fileName": "c03.jpg",
       "origFileName": "c03.jpg",
       "width": 800,
@@ -195,10 +195,10 @@
   ],
   "group": "Certificates"
 }</script></a></div>
-              <div class="w-col w-col-2"><a href="#" class="lightbox-element w-inline-block w-lightbox"><img src="../images/c06_1.jpg" alt=""><script type="application/json" class="w-json">{
+              <div class="w-col w-col-2"><a href="#" class="lightbox-element w-inline-block w-lightbox"><img src="../images/c06.jpg" alt=""><script type="application/json" class="w-json">{
   "items": [
     {
-      "url": "../images/c06.jpg",
+      "url": "../images/c06_1.jpg",
       "fileName": "c06.jpg",
       "origFileName": "c06.jpg",
       "width": 600,
@@ -239,10 +239,10 @@
   ],
   "group": "Certificates"
 }</script></a></div>
-              <div class="w-col w-col-2"><a href="#" class="lightbox-element w-inline-block w-lightbox"><img src="../images/c09_1.jpg" alt=""><script type="application/json" class="w-json">{
+              <div class="w-col w-col-2"><a href="#" class="lightbox-element w-inline-block w-lightbox"><img src="../images/c09.jpg" alt=""><script type="application/json" class="w-json">{
   "items": [
     {
-      "url": "../images/c09.jpg",
+      "url": "../images/c09_1.jpg",
       "fileName": "c09.jpg",
       "origFileName": "c09.jpg",
       "width": 600,
@@ -267,10 +267,10 @@
   ],
   "group": "Certificates"
 }</script></a></div>
-              <div class="w-col w-col-2"><a href="#" class="lightbox-element w-inline-block w-lightbox"><img src="../images/c11.jpg" alt=""><script type="application/json" class="w-json">{
+              <div class="w-col w-col-2"><a href="#" class="lightbox-element w-inline-block w-lightbox"><img src="../images/c11_1.jpg" alt=""><script type="application/json" class="w-json">{
   "items": [
     {
-      "url": "../images/c11_1.jpg",
+      "url": "../images/c11.jpg",
       "fileName": "c11.jpg",
       "origFileName": "c11.jpg",
       "width": 600,
@@ -281,10 +281,10 @@
   ],
   "group": "Certificates"
 }</script></a></div>
-              <div class="w-col w-col-2"><a href="#" class="lightbox-element w-inline-block w-lightbox"><img src="../images/c12.jpg" alt=""><script type="application/json" class="w-json">{
+              <div class="w-col w-col-2"><a href="#" class="lightbox-element w-inline-block w-lightbox"><img src="../images/c12_1.jpg" alt=""><script type="application/json" class="w-json">{
   "items": [
     {
-      "url": "../images/c12_1.jpg",
+      "url": "../images/c12.jpg",
       "fileName": "c12.jpg",
       "origFileName": "c12.jpg",
       "width": 800,
@@ -359,7 +359,7 @@
       </div>
     </div>
   </div>
-  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.4.1.min.220afd743d.js" type="text/javascript" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.4.1.min.220afd743d.js?site=55d576c4965aff177731ada8" type="text/javascript" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script src="../js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
   <script src="https://cdn.rawgit.com/carhartl/jquery-cookie/master/src/jquery.cookie.js"></script>
