--- a/nasze-przychodnie/gainet-usg.html
+++ b/nasze-przychodnie/gainet-usg.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sat Jun 20 2020 10:11:31 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sat Jun 20 2020 10:15:27 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="55d576c4965aff177731adad" data-wf-site="55d576c4965aff177731ada8">
 <head>
   <meta charset="utf-8">
@@ -66,7 +66,7 @@
           <div class="closed-info__h">Gabinet USG nieczynny</div>
           <div class="closed-info__p">Przychodnia nie wykonuje już usług USG</div>
           <div class="closed-info__button-holder">
-            <a href="#" class="button is-closed-info w-inline-block">
+            <a href="../index.html" class="button is-closed-info w-inline-block">
               <div>Wróć do strony głównej</div>
             </a>
           </div>
